<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4E342E"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_rectangle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/check_box_rectangle"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <CheckBox
            android:id="@+id/check_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/check_box_line"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <CheckBox
            android:id="@+id/check_curve"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/check_box_curve"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <CheckBox
            android:id="@+id/check_zoom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/check_box_zoom"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <crabster.rudakov.sberschoollesson10hwk.Paint2DView
        android:id="@+id/draw_view"
        android:layout_width="match_parent"
        android:layout_height="500dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4E342E"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/check_box_white"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <CheckBox
            android:id="@+id/check_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/check_box_red"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <CheckBox
            android:id="@+id/check_yellow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/check_box_yellow"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        android:text="@string/button_reset_canvas"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>